--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "postinstall-links": "bin/postinstall-links.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kapouer/postinstall-links.git"
@@ -21,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/kapouer/postinstall-links/issues"
   },
-  "homepage": "https://github.com/kapouer/postinstall-links#readme"
+  "homepage": "https://github.com/kapouer/postinstall-links#readme",
+  "dependencies": {
+    "mkdirp": "^0.5.1",
+    "pify": "^3.0.0"
+  }
 }
