--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/kapouer/postinstall-links#readme",
   "dependencies": {
+    "glob": "^7.1.2",
     "mkdirp": "^0.5.1",
     "pify": "^3.0.0"
   }
