--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Create links to files in dependencies at npm postinstall",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "bin": {
     "postinstall-links": "bin/postinstall-links.js"
@@ -29,5 +29,11 @@
     "glob": "^7.1.2",
     "mkdirp": "^0.5.1",
     "pify": "^3.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^5.0.0",
+    "ncp": "^2.0.0",
+    "rimraf": "^2.6.2",
+    "spawn-please": "^0.3.0"
   }
 }
