--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "glob": "^7.1.2",
     "mkdirp": "^0.5.1",
-    "pify": "^3.0.0"
+    "pify": "^3.0.0",
+    "resolve-pkg": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "^5.0.0",
